--- a/django/manager_employees/departments/templates/employee_list.html
+++ b/django/manager_employees/departments/templates/employee_list.html
@@ -2,24 +2,38 @@
 <link rel="stylesheet" href="{% static 'css/department.css' %}" />
 {% block content %}
 <!-- Title Bar -->
+
+<header class="header-detail">
 <div
-  class="d-flex justify-content-between align-items-center bg-white rounded"
+  class="header-department"
   style="height: 80px; padding: 20px"
 >
-  <h3 style="font-weight: 700">Depertment detail</h3>
-  <p class="header-notify">Name: {{ department.name}}!</p>
-  <p class="header-notify">Description: {{ department.description}}!</p>
-  <p class="header-notify">Number of employees: {{ employees|length }}</p>
+
+
+  <h3 class = "department-title">Depertment detail</h3>
+  <p class="number-employees">Number of employees: {{ employees|length }}</p>
+
   <button
-    type="button"
-    class="btn btn-primary"
-    data-toggle="modal"
-    data-target="#myModalCreate"
-    onclick="showDepartmentDetails('{{ department.id }}')"
-  >
-    Edit
-  </button>
+  type="button"
+  class="btn btn-primary"
+  data-toggle="modal"
+  data-target="#myModalEdit"
+>
+  Edit
+</button>
+
 </div>
+ <div class = "header-infor-container">
+     <div class = "name-description">
+         <p class="header-infor name">Name: {{ department.name}}</p>
+         <p class="header-infor description">Description: {{ department.description}}</p>
+    </div>
+   
+ </div>
+
+
+
+</header>
 <!-- Card with Table -->
 <div
   style="
@@ -58,7 +72,7 @@
         <li><a class="dropdown-item" href="#">Something else here</a></li>
       </ul>
     </div>
-    {% comment %} date picker {% endcomment %}
+
     <div class="input-group rounded" style="width: 15%; margin-left: 20px">
       <input
         class="form-control rounded"
@@ -81,7 +95,7 @@
       />
       <span class="input-group-text border-0" id="search-addon"> </span>
     </div>
-    {% comment %} search bar {% endcomment %}
+
     <div class="input-group rounded" style="width: 20%">
       <input
         type="search"
@@ -133,139 +147,54 @@
             </button>
           </td>
         </tr>
-      {%endfor%}
+        {%endfor%}
       </tbody>
     </table>
   </div>
 </div>
-<!-- Modal Create -->
-<div class="modal" id="myModalCreate">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <!-- Modal Header -->
-      <div class="modal-header">
-        <h4 class="modal-title">New</h4>
-        <button type="button" class="close" data-dismiss="modal">
-          &times;
-        </button>
-      </div>
-      <!-- Modal body -->
-      <div class="modal-body">
-        <form>
-          <div class="form-group">
-            <label for="exampleInputEmail1">Name</label>
-            <input
-              type="text"
-              class="form-control"
-              id="exampleInputEmail1"
-              aria-describedby="emailHelp"
-              placeholder="Enter Name"
-            />
-          </div>
-          <div class="form-group">
-            <label for="exampleInputPassword1">Description</label>
-            <input
-              type="text"
-              class="form-control"
-              id="exampleInputPassword1"
-              placeholder="Enter Description"
-            />
-          </div>
-          <div class="form-group">
-            <label for="exampleFormControlTextarea1">Fied Area</label>
-            <textarea
-              class="form-control"
-              id="exampleFormControlTextarea1"
-              rows="3"
-              placeholder="Enter Description"
-            ></textarea>
-          </div>
-        </form>
-      </div>
-      <!-- Modal footer -->
-      <div class="modal-footer">
-        <button type="button" class="btn btn-primary" data-dismiss="modal">
-          Create
-        </button>
-        <button type="button" class="btn btn-danger" data-dismiss="modal">
-          Close
-        </button>
-      </div>
-    </div>
-  </div>
-</div>
-<!-- Modal Detail -->
+
+<!-- Modal Edit -->
 <div class="modal" id="myModalEdit">
   <div class="modal-dialog">
     <div class="modal-content">
-      <!-- Modal Header -->
       <div class="modal-header">
-        <h4 class="modal-title">Detail employee</h4>
+        <h4 class="modal-title">Edit department</h4>
         <button type="button" class="close" data-dismiss="modal">
           &times;
         </button>
       </div>
-      <!-- Modal body -->
       <div class="modal-body">
-        <form>
+        <form id="myFormEdit" method="patch" action="{% url 'employees_list' department.id %}">
+          {% csrf_token %}
           <div class="form-group">
-            <label for="exampleInputEmail1">Full Name</label>
+            <label>Name</label>
             <input
               type="text"
               class="form-control"
-              id="exampleInputEmail1"
-              aria-describedby="emailHelp"
+              id="inputName"
+              name="name" 
             />
           </div>
           <div class="form-group">
-            <label for="exampleInputPassword1">Birthday</label>
+            <label>Description</label>
             <input
               type="text"
               class="form-control"
-              id="exampleInputPassword1"
+              id="inputDescription"
+              name="description"
             />
           </div>
-          <div class="form-group">
-            <label for="exampleFormControlTextarea1">Email</label>
-            <textarea
-              class="form-control"
-              id="exampleFormControlTextarea1"
-              rows="3"
-            ></textarea>
+          <div class="modal-footer">
+            <button type="submit" class="btn btn-primary">Save</button>
+            <button type="button" class="btn btn-danger" data-dismiss="modal">
+              Close
+            </button>
           </div>
         </form>
       </div>
-      <!-- Modal footer -->
-      <div class="modal-footer">
-        <button type="button" class="btn btn-primary" data-dismiss="modal">
-          Save
-        </button>
-        <button type="button" class="btn btn-danger" data-dismiss="modal">
-          Close
-        </button>
-      </div>
     </div>
   </div>
 </div>
-<!-- Modal Delete -->
-<div class="modal" id="myModalDelete">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <!-- Modal body -->
-      <div class="modal-body">
-        <h3>You want to delete this employee from department!</h3>
-      </div>
-      <!-- Modal footer -->
-      <div class="modal-footer">
-        <button type="button" class="btn btn-primary" data-dismiss="modal">
-          Cancel
-        </button>
-        <button type="button" class="btn btn-danger" data-dismiss="modal">
-          Delete
-        </button>
-      </div>
-    </div>
-  </div>
-</div>
+
 
 {% endblock %}
