--- a/django/manager_employees/departments/templates/list.html
+++ b/django/manager_employees/departments/templates/list.html
@@ -7,6 +7,17 @@
   style="height: 80px; padding: 20px"
 >
   <h3 style="font-weight: 700">Departments</h3>
+  <button
+        class="btn"
+        style="background-color: #dee2e6; 
+        border: none"
+        boder-radius: 4px;
+        type="button"
+        data-toggle="modal"
+        data-target="#myModalCreate"
+      >
+        Add new +
+      </button>
 </div>
 <!-- Card with Table -->
 <div
@@ -19,28 +30,14 @@
   "
 >
   <div
-    style="
-      background-color: #EFEFEF;
-      padding: 20px;
-      margin-bottom: 20px;
-      border-radius: 5px;
-      width: 100%;
-    "
+  
     class="d-inline-flex justify-content-start align-items-center"
   >
     <div class="dropdown">
-      <button
-        class="btn"
-        style="background-color: #fff; border: none"
-        type="button"
-        data-toggle="modal"
-        data-target="#myModalCreate"
-      >
-        Add new +
-      </button>
-      </ul>
+      
+    
     </div>
-    {% comment %} date picker {% endcomment %}
+   
   </div>
   <div class="table-responsive">
     <table class="table rounded" style="width: 100%">
@@ -62,7 +59,7 @@
             <button
               type="button"
               class="btn btn-primary"
-              onclick="window.location.href='{% url 'department_detail' department.id %}'"
+              onclick="window.location.href='{% url 'employees_list' department.id %}'"
             >
               Details
             </button>
@@ -71,6 +68,7 @@
               class="btn btn-danger"
               data-toggle="modal"
               data-target="#myModalDelete"
+              {% comment %} onclick="setDeleteDepartmentId('{{ department.id }}')" {% endcomment %}
             >
               Delete
             </button>
@@ -108,56 +106,19 @@
             <div id="error-message_description" style="color: red;"></div>
           </div>
           <div class="modal-footer">
+            <button type="button" class="btn btn-danger" data-dismiss="modal">
+              Cancel
+            </button>
             <button type="submit" id="submitBtn" class="btn btn-primary">
               Create
             </button>
-            <button type="button" class="btn btn-danger" data-dismiss="modal">
-              Close
-            </button>
           </div>
         </form>
       </div>
     </div>
   </div>
 </div>
-<!-- Modal Edit -->
-<div class="modal" id="myModalEdit">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h4 class="modal-title">Detail</h4>
-        <button type="button" class="close" data-dismiss="modal">
-          &times;
-        </button>
-      </div>
-      <div class="modal-body">
-        <form id="myFormEdit" method="patch">
-          {% csrf_token %}
-          <div class="form-group">
-            <label>ID</label>
-            <input type="text" class="form-control" id="departmentID" value="" readonly>
-          </div>
-          <div class="form-group">
-            <label>Create at</label>
-            <input type="text" class="form-control" id="departmentTime" value="" readonly>
-          </div>
-          <div class="form-group">
-            <label>Name</label>
-            <input type="text" class="form-control" id="editNameDepartment" name="name" value="">
-          </div>
-          <div class="form-group">
-            <label>Description</label>
-            <input type="text" class="form-control" id="editDescription" name="description" value="">
-          </div>
-          <div class="modal-footer">
-            <button type="submit" class="btn btn-primary">Save</button>
-            <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
-          </div>
-        </form>
-      </div>
-    </div>
-  </div>
-</div>
+
 <!-- Modal Delete -->
 <div class="modal" id="myModalDelete">
   <div class="modal-dialog">
@@ -171,7 +132,7 @@
         <button type="button" class="btn btn-primary" data-dismiss="modal">
           Cancel
         </button>
-        <button type="button" class="btn btn-danger" data-dismiss="modal">
+        <button type="button" class="btn btn-danger" onclick="myConfirmDelete()">
           Delete
         </button>
       </div>
