--- a/django/manager_employees/static/css/navigator.css
+++ b/django/manager_employees/static/css/navigator.css
@@ -1,78 +1,116 @@
+/* @import url(./reset.css); */
+
 html,
 body {
-    height: 100%;
-    margin: 0;
+  height: 100%;
+  margin: 0;
 }
 
 .sidebar {
-    background-color: rgb(121, 119, 119);
-    padding: 16px 0 0;
-    height: 100%;
-    width: 15%;
-    z-index: 600;
+  background-color: rgb(121, 119, 119);
+  padding: 16px 0 0;
+  height: 100%;
+  width: 15%;
+  z-index: 600;
 }
 
 .sidebar-list {
-    list-style: none;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  list-style: none;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .sidebar-item {
-    margin-bottom: 20px;
-    padding: 10px 0px;
-    margin: 0 auto;
+  margin-bottom: 20px;
+  padding: 10px 0px;
+  margin: 0 auto;
 }
 
 .item-link {
-    color: white;
-    text-decoration: none;
-    margin-bottom: 20px;
+  color: white;
+  text-decoration: none;
+  margin-bottom: 20px;
 }
 
 .header {
-    background-color: black;
-    display: flex;
-    justify-content: flex-end;
+  background-color: black;
+  display: flex;
+  justify-content: flex-end;
 }
 
 .header-wrapper {
-    display: flex;
-    align-items: center;
+  display: flex;
+  align-items: center;
 }
 
 .header-button {
-    border-radius: 8px;
-    width: 70px;
-    height: 32px;
-    border: none;
-    margin: 0 15px;
+  border-radius: 8px;
+  width: 70px;
+  height: 32px;
+  border: none;
+  margin: 0 15px;
+}
+
+.header-detail {
+  display: flex;
+  flex-direction: column;
+  background-color: white;
+}
+
+.header-department {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.number-employees {
+  margin-left: 300px;
+  margin-bottom: 0;
+}
+
+.department-title {
+  font-weight: 700;
+}
+
+.header-infor-container {
+  display: flex;
+  justify-content: space-between;
+}
+
+.header-infor {
+    margin-left: 20px;
+}
+
+.name-description {
+  display: flex;
+  flex-direction: column;
 }
 
 .header-notify {
-    color: white;
+  color: white;
+  margin-top: 15px;
 }
 
 .sidebar-item.active {
-    background-color: #6C6D6E;
-    color: rgb(9, 49, 226);
-    width: 100%;
-    margin: 0 auto;
-    text-align: center;
-}
-
-ul {
-    padding: 0;
+  background-color: #6c6d6e;
+  color: rgb(9, 49, 226);
+  width: 100%;
+  margin: 0 auto;
+  text-align: center;
 }
 
 .body-container {
-    display: inline-flex;
-    height: 100%;
-    width: 100%;
+  display: inline-flex;
+  height: 100%;
+  width: 100%;
 }
 
 .content {
-    flex: 1;
-    background-color: #EFEFEF;
+  flex: 1;
+  background-color: #efefef;
+}
+
+.modal-content{
+    padding: 0px 20px;
 }
